# TI-SPO-Lab2

./: CMakeLists.txt  README.md  a.out  alphabet  main.cpp  probabilityOfOccurrence  sortedAlphabet
CodeRater/: CodeRater.cpp  CodeRater.h
Shennon_algorithm/: Coder.cpp  Coder.h  Decoder.cpp  Decoder.h
StringParser/: StringParser.cpp  StringParser.h
data/: alphabet  code  message  probabilityOfOccurrence
util/: VectorUtil.cpp  VectorUtil.h  Writer.h
util/StringParser/: StringParser.cpp  StringParser.h
